--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "fs": "0.0.1-security",
+    "play": "^0.5.0",
     "readline": "^1.3.0",
     "require-environment-variables": "^1.1.2",
     "watson-developer-cloud": "^2.9.1"
